[tool.poetry]
name = "hakolbesweather"
version = "0.1.0"
description = ""
authors = ["heaphopper <tzvienir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
