[tool.poetry]
name = "hakolbesweather"
version = "0.1.0"
description = ""
authors = ["heaphopper <tzvienir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
streamlit = "^1.41.1"
pydantic = "^2.10.4"
pandas = "^2.2.3"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
